# groupby_capstone_project

./: .gitignore  Dockerfile  GroupBy_Exploration.ipynb  README.md  group_by_capstone_project-spencer.ipynb  group_by_capstone_project_clayton.ipynb  pyproject.toml
groupby_capstone/: __main__.py  app.py  settings.py
groupby_capstone/enums/: event_type.py
groupby_capstone/static/css/: main.css
groupby_capstone/templates/: cart.html  index.html  product.html
groupby_capstone/test/: test_session.py
groupby_capstone/utils/: data_utils.py  grouby_capstone.py  settings.py  structured_logger.py
groupby_capstone/utils/decorators/: profile.py
groupby_capstone/utils/flask_form_classes/: choices_select.py  session_event.py
kubernetes/: deployment.yaml  hpa.yaml  rbac.yaml  service-account.yaml  service.yaml
