[tool.poetry]
name = "groupby_capstone"
version = "0.1.0"
description = ""
authors = ["Spencer Dorway <sdorway11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.1.12"
pandas = "^1.3.5"
jupyter = "^1.0.0"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
