[tool.poetry]
name = "groupby_capstone"
version = "0.1.0"
description = ""
authors = ["Spencer Dorway <sdorway11@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.12,<3.11"
poetry = "^1.1.13"
pandas = "1.3.5"
numpy = "1.21.5"
structlog = "^21.5.0"
sklearn = "^0.0"
Flask = "^2.0.3"
memory-profiler = "^0.60.0"
WTForms = "^3.0.1"
cryptography = "^36.0.1"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
